--- a/plugin.xml
+++ b/plugin.xml
@@ -1,35 +1,25 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-template" version="0.0.0">
-  <name>Template</name>
-  <description>Cordova Plugin Template</description>
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-app-info" version="0.0.0">
+  <name>App Info</name>
+  <description>Cordova Plugin Info</description>
   <license>Apache 2.0</license>
-  <keywords>cordova, plugin, template</keywords>
+  <keywords>cordova, plugin, appInfo</keywords>
 
-  <js-module src="www/template.js" name="template">
-    <clobbers target="navigator.template" />
+  <js-module src="www/appInfo.js" name="appInfo">
+    <clobbers target="navigator.appInfo" />
   </js-module>
 
   <!-- android -->
   <platform name="android">
     <config-file target="res/xml/config.xml" parent="/*">
-      <feature name="Template" >
-        <param name="android-package" value="cordova.plugin.Template"/>
+      <feature name="AppInfo" >
+        <param name="android-package" value="cordova.plugin.app.info"/>
       </feature>
     </config-file>
 
-    <source-file src="src/android/Template.java" target-dir="src/cordova/plugin" />
+    <source-file src="src/android/AppInfo.java" target-dir="src/cordova/plugin" />
   </platform>
 
-  <!-- ios -->
-  <platform name="ios">
-    <config-file target="config.xml" parent="/*">
-      <feature name="Template">
-        <param name="ios-package" value="CPTemplate" />
-      </feature>
-    </config-file>
-    <header-file src="src/ios/CPTemplate.h" />
-    <source-file src="src/ios/CPTemplate.m" />
-  </platform>
 
 </plugin>
