--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cordova-plugin-app-info",
+  "name": "az-cordova-plugin-app-info",
   "version": "0.0.0",
   "description": "Cordova Plugin Info",
   "cordova": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ayyazzafar/cordova-plugin-template.git"
+    "url": "git+https://github.com/ayyazzafar/cordova-plugin-app-info.git"
   },
   "keywords": [
     "cordova",
@@ -22,7 +22,7 @@
   "author": "Ayyaz Zafar",
   "license": "Apache 2.0",
   "bugs": {
-    "url": "https://github.com/ayyazzafar/cordova-plugin-template/issues"
+    "url": "https://github.com/ayyazzafar/cordova-plugin-app-info/issues"
   },
-  "homepage": "https://github.com/ayyazzafar/cordova-plugin-template#readme"
+  "homepage": "https://github.com/ayyazzafar/cordova-plugin-app-info#readme"
 }
